lucia-macros/tests/ui/error_enum/responses_can_not_have_type_params.stderr
error: Responses can not have type parameters
  --> tests/ui/error_enum/responses_can_not_have_type_params.rs:10:10
   |
10 |   struct Res<T>(T);
   |          ^^^
